--- a/packages/pilot/src/containers/Filter/Toolbar/style.css
+++ b/packages/pilot/src/containers/Filter/Toolbar/style.css
@@ -1,3 +1,9 @@
+@import "former-kit-skin-pagarme/dist/styles/colors.css";
+
 .search {
   min-width: 360px;
+}
+
+.cardAction {
+  background-color: var(--color-white);
 }
